--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
             "MVC\\" : "./",
             "Controllers\\": "controllers/",
             "Model\\": "models/",
-            "views\\": "views/"
+            "views\\": "views/",
+            "Classes\\": "classes/"
         }
     },
     "authors": [
@@ -16,6 +17,7 @@
         }
     ],
     "require": {
-        "intervention/image": "^3.11"
+        "intervention/image": "^3.11",
+        "phpmailer/phpmailer": "^6.10"
     }
 }
