--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     ],
     "require": {
         "intervention/image": "^3.11",
-        "phpmailer/phpmailer": "^6.10"
+        "phpmailer/phpmailer": "^6.10",
+        "picqer/php-barcode-generator": "^3.2",
+        "dompdf/dompdf": "^3.1"
     }
 }
