--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "intervention/image": "^3.11",
         "phpmailer/phpmailer": "^6.10",
         "picqer/php-barcode-generator": "^3.2",
-        "dompdf/dompdf": "^3.1"
+        "dompdf/dompdf": "^3.1",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
