--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "picqer/php-barcode-generator": "^3.2",
         "dompdf/dompdf": "^3.1",
         "vlucas/phpdotenv": "^5.6",
-        "twbs/bootstrap": "^5.3"
+        "twbs/bootstrap": "^5.3",
+        "phpoffice/phpspreadsheet": "^4.3"
     }
 }
