--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
             "Controllers\\": "controllers/",
             "Model\\": "models/",
             "views\\": "views/",
-            "Classes\\": "classes/"
+            "Classes\\": "classes/",
+            "Middleware\\": "middleware/"
         }
     },
     "authors": [
