Revert "cambios con una instancia"
This reverts commit bb9230008cfe4de7ca6e393988257b977732ac5a.

--- a/includes/.env
+++ b/includes/.env
@@ -1,10 +1,9 @@
 DB_HOST=localhost
 DB_NAME=db_la57cap
-DB_ADMIN_USER=la57_user
-DB_ADMIN_PASS=123456
+
 # Admin del sistema
-# DB_ADMIN_USER=admin57
-# DB_ADMIN_PASS=admin123
+DB_ADMIN_USER=admin57
+DB_ADMIN_PASS=admin123
 
 # Lector para login
 DB_LOGIN_USER=lectorlogin
