--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
             "Controllers\\": "controllers/",
             "Model\\": "models/",
             "views\\": "views/",
-            "Classes\\": "classes/",
-            "Middleware\\": "middleware/"
+            "Classes\\": "classes/"
         }
     },
     "authors": [
