ROLES Y USUARIOS en mysql

--- a/includes/.env
+++ b/includes/.env
@@ -6,8 +6,8 @@ DB_ADMIN_USER=admin57
 DB_ADMIN_PASS=admin123
 
 # Lector para login
-DB_LOGIN_USER=lectorlogin
-DB_LOGIN_PASS=lect123
+DB_WEBAPP_USER=webApp57
+DB_WEBAPP_PASS=webApp123
 
 # Usuarios por rol
 DB_CLIENTE_USER=cliente57
