--- a/includes/.env
+++ b/includes/.env
@@ -1,29 +1,15 @@
 DB_HOST=localhost
 DB_NAME=db_la57cap
+DB_PORT=3307
 
-# Admin del sistema
-DB_ADMIN_USER=admin57
-DB_ADMIN_PASS=admin123
-
-# Lector para login
 DB_WEBAPP_USER=webApp57
 DB_WEBAPP_PASS=webApp123
-
-# Usuarios por rol
-DB_CLIENTE_USER=cliente57
-DB_CLIENTE_PASS=cliente123
-
-DB_REPARTIDOR_USER=repartidor57
-DB_REPARTIDOR_PASS=rep123
-
-DB_VENDEDOR_USER=vendedor57
-DB_VENDEDOR_PASS=vend123
 
 # Email SMTP
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USER=b4f3ffccd8df79
-MAIL_PASS=3d4546daebf6a9
+MAIL_USER=7c374f5b24207f
+MAIL_PASS=80964f1149a0d2
 MAIL_FROM=cuentas@la57cap.com
 MAIL_FROM_NAME="LA 57 CAP"
 
