Ventas directa mejorada

--- a/includes/.env
+++ b/includes/.env
@@ -6,13 +6,13 @@ DB_WEBAPP_USER=webApp57
 DB_WEBAPP_PASS=webApp123
 
 # Email SMTP
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USER=13696dbecbd255
-MAIL_PASS=71fc0c54bbecf1
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USER=prueba.email57@gmail.com
+MAIL_PASS=yjbbsjhcmtrminzh
 MAIL_FROM=cuentas@la57cap.com
 MAIL_FROM_NAME="LA 57 CAP"
 
 
 # URL base para confirmaciones y recuperación
-FRONTEND_URL="http://localhost:3000"
+FRONTEND_URL="https://iygo5k-ip-190-143-240-189.tunnelmole.net"
